# SoftBodyPhysics

./: .gitignore  Body.cpp  Body.h  CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  Particle.cpp  Particle.h  README.md  RenderWidget.cpp  RenderWidget.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SoftBodyPlayground.pro  mainwindow.ui
Assets/shaders/: multiColor.fragment.shader  multiColor.vertex.shader  singleColor.fragment.shader  singleColor.vertex.shader
Scenes/: Bar.cpp  Bar.h
Shaders/: MultiColorProgram.cpp  MultiColorProgram.h  SingleColorProgram.cpp  SingleColorProgram.h
docs/: index.html  index.js  index.wasm
html/: index.html
src/: Body.cpp  Body.h  Particle.cpp  Particle.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  linalg.h  main.cpp
src/Scenes/: Bar.cpp  Bar.h
src/Shaders/: MultiColorProgram.cpp  MultiColorProgram.h  SingleColorProgram.cpp  SingleColorProgram.h
